<resources>
    <string name="app_name">ImageEditorDemo</string>

    <string name="main_page_title">作品列表</string>
    <string name="main_page_take_photo">拍摄</string>
    <string name="main_page_choose_photo">选取</string>
    <string name="main_page_work_timestamp_format">时间：%1$s</string>
    <string name="main_page_work_resolution_format">分辨率：%1$d x %2$d</string>
    <string name="main_page_work_size">大小：</string>
    <string name="main_page_work_size_format_byte">%1$d 字节</string>
    <string name="main_page_work_size_format_k_byte">%1$.2f KB</string>
    <string name="main_page_work_size_format_m_byte">%1$.2f MB</string>

    <string name="dialog_warning">警告</string>
    <string name="dialog_delete_confirm">确定要删除吗？</string>
    <string name="info_delete_done">删除成功</string>

    <string name="image_save_done">保存完毕!</string>
    <string name="exit_save_done">退出编辑</string>
    <string name="continue_save_done">继续编辑</string>

    <string name="please_select_transition">请选择转场效果</string>
    <string name="delete_transition">删除转场</string>

    <string name="main_bottom_selection_preview">查看</string>
    <string name="main_bottom_selection_edit">编辑</string>
    <string name="main_bottom_selection_share">分享</string>
    <string name="main_bottom_selection_delete">删除</string>
    <string name="main_bottom_selection_cancel">取消</string>

    <string name="goto_work_list">作品列表</string>
    <string name="save_work">保存</string>
    <string name="histogram_view">直方图</string>
    <string name="undo">撤销</string>
    <string name="redo">恢复</string>

    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>

    <string name="edit_effect">特效</string>
    <string name="edit_effect_adjust_value">调整值:</string>

    <string name="edit_adjust">调整</string>
    <string name="edit_adjust_brightness">亮度</string>
    <string name="edit_adjust_exposure">曝光</string>
    <string name="edit_adjust_gamma">伽马</string>
    <string name="edit_adjust_contrast">对比度</string>
    <string name="edit_adjust_saturation">饱和度</string>
    <string name="edit_adjust_sharpen">锐化</string>
    <string name="edit_adjust_dark_corner">暗角</string>
    <string name="edit_adjust_shadow">阴影</string>
    <string name="edit_adjust_highlight">高光</string>
    <string name="edit_adjust_color_temp">色温</string>
    <string name="edit_adjust_tone">色调</string>
    <string name="edit_adjust_denoise">降噪</string>
    <string name="edit_adjust_curve">RGB调整</string>
    <string name="edit_adjust_curve_red">红色</string>
    <string name="edit_adjust_curve_green">绿色</string>
    <string name="edit_adjust_curve_blue">蓝色</string>
    <string name="edit_adjust_color_balance">色彩平衡</string>

    <string name="edit_cut">裁剪</string>

    <string name="edit_transform">空间变换</string>
    <string name="edit_transform_perspective">透视变换</string>
    <string name="edit_transform_orthographic">正射变换</string>
    <string name="edit_transform_rotate_left">左转动</string>
    <string name="edit_transform_rotate_right">右转动</string>
    <string name="edit_transform_flip_x">水平镜像</string>
    <string name="edit_transform_flip_y">垂直镜像</string>
    <string name="edit_transform_rotate">旋转</string>
    <string name="edit_rotate_x">X轴: %1$d 度</string>
    <string name="edit_rotate_y">Y轴: %1$d 度</string>
    <string name="edit_rotate_z">Z轴: %1$d 度</string>
    <string name="edit_transform_translate">移动</string>
    <string name="edit_translate_x">X轴: %1$.2f</string>
    <string name="edit_translate_y">Y轴: %1$.2f</string>
    <string name="edit_translate_z">Z轴: %1$.2f</string>

    <string name="edit_text">文字</string>
    <string name="edit_text_panel_add_dialog_content">请输入文字</string>
    <string name="edit_text_panel_change_transparent">不透明度</string>
    <string name="edit_text_panel_change_size">尺寸</string>
    <string name="edit_text_panel_change_color">颜色</string>
    <string name="edit_text_panel_change_color_red">红色</string>
    <string name="edit_text_panel_change_color_green">绿色</string>
    <string name="edit_text_panel_change_color_blue">蓝色</string>
    <string name="edit_text_panel_change_texture">纹理</string>

    <string name="edit_focus">对焦</string>

    <string name="edit_sticker">贴纸</string>
    <string name="edit_sticker_asset">素材</string>
    <string name="edit_sticker_adjust">调整</string>
    <string name="edit_sticker_alpha">不透明度</string>
    <string name="edit_sticker_size">大小</string>
    <string name="edit_sticker_red">红色</string>
    <string name="edit_sticker_green">绿色</string>
    <string name="edit_sticker_blue">蓝色</string>
    <string name="edit_sticker_rotation">方向</string>

    <string name="edit_mosaic">马赛克</string>
    <string name="edit_mosaic_size">大小</string>
    <string name="edit_mosaic_strength">强度</string>
    <string name="edit_mosaic_brush">画笔</string>
    <string name="edit_mosaic_erase">橡皮擦</string>
</resources>
