<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_bottom_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_transparent_dark_red"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/main_bottom_selection_preview"
        android:textColor="@color/font_white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_light_dark" />

    <TextView
        android:id="@+id/tv_bottom_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_transparent_dark_red"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/main_bottom_selection_edit"
        android:textColor="@color/font_white" />

    <View
        android:id="@+id/vw_edit_space"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_light_dark" />

    <TextView
        android:id="@+id/tv_bottom_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_transparent_dark_red"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/main_bottom_selection_share"
        android:textColor="@color/font_white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_light_dark" />

    <TextView
        android:id="@+id/tv_bottom_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_transparent_dark_red"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/main_bottom_selection_delete"
        android:textColor="@color/font_red" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_light_dark" />

    <TextView
        android:id="@+id/tv_bottom_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_transparent_dark_red"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/main_bottom_selection_cancel"
        android:textColor="@color/font_white" />

</LinearLayout>