<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_dark"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/image_save_done"
        android:textColor="@color/font_green" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_light_dark" />

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dark_red"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/main_bottom_selection_share"
        android:textColor="@color/font_white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_light_dark" />

    <TextView
        android:id="@+id/tv_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dark_red"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/exit_save_done"
        android:textColor="@color/font_white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_light_dark" />

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dark_red"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/continue_save_done"
        android:textColor="@color/font_white" />

</LinearLayout>