<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/vw_title"
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                android:background="@drawable/bg_dark_red"
                android:src="@drawable/icon_cancel" />

            <TextView
                android:id="@+id/tv_filter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:text="@string/edit_mosaic" />

            <ImageView
                android:id="@+id/iv_apply"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_alignTop="@id/tv_filter_name"
                android:layout_alignBottom="@id/tv_filter_name"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="18dp"
                android:background="@drawable/bg_dark_red"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:src="@drawable/icon_apply" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/edit_mosaic_size"
            android:textColor="@color/font_white" />

        <SeekBar
            android:id="@+id/sb_mosaic_size"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:max="1000"
            android:progress="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/edit_mosaic_strength"
            android:textColor="@color/font_white" />

        <SeekBar
            android:id="@+id/sb_mosaic_strength"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:max="1000"
            android:progress="500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/vw_mosaic_brush"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/theme_red"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_mosaic_brush" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_mosaic_brush"
                    android:textColor="@color/font_white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vw_mosaic_erase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_mosaic_eraser" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_mosaic_erase"
                    android:textColor="@color/font_white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>