<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageEditActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_edit_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/vw_edit_panel_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@id/rcv_edit_list"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="horizontal" />

    <TextureView
        android:id="@+id/vw_texture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/vw_edit_panel_container" />

    <RelativeLayout
        android:id="@+id/vw_title"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <LinearLayout
            android:id="@+id/vw_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_pre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/goto_work_list"
                android:textColor="@color/font_white" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginEnd="18dp"
            android:background="@drawable/bg_solid_red"
            android:paddingBottom="5dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:text="@string/save_work"
            android:textColor="@color/font_white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_undo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="18dp"
                android:background="@drawable/bg_solid_red"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/undo"
                android:textColor="@color/font_white" />

            <TextView
                android:id="@+id/tv_redo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_solid_red"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:text="@string/redo"
                android:textColor="@color/font_white" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>